--- a/resources/location.yml
+++ b/resources/location.yml
@@ -2,26 +2,28 @@
 room:
   Cage1:
     Phase: 1
-    description: The cage smell bad
+    description: "The cage smells very bad with flickering light and water leaking from the roof"
     Moves:
       east: "West_Hall"
       south: "South_Hall"
-    #  Just listing all these items as placeholder but does not apply in all rooms
     Inventory:
       window:
-        action: "You look outside and it makes you sad"
+        description: "Heavily reinforced metal and cannot open"
+        action: "You look outside, it makes you sad and anxious."
       desk:
+        description: "Old worn out wooden desk with a drawer"
         action: "The desk is mostly broken, but your are able to open the desk"
         item: "key"
-#      - "keys"
-#      - "guard uniform"
-#      - "key card"
-#      - "box"
-#      - "chair"
-#      - "key from supervisor"
+      bed:
+        description: "Full-size bed sits directly under window with uncomfortable mattress and
+                      exposed loose spring. Spring could come in handy... "
+        action: "Pluck a spring from the mattress that might help you escape later"
+
 
   South_Hall:
     Phase: 1
+    description: "The South hall is similar to the cage, filthy and muggy and it leads
+                  to the other halls"
     Moves:
       west: "Guard?"
       north: "Cage1"
@@ -31,42 +33,50 @@ room:
 
   NPC_Cage1:
     Phase: 1
+    description: "The cage smells very bad with flickering
+                  light and water leaking from the roof but with another captive"
     Moves:
       north: "South_Hall"
       east: "Storage_Room"
-    #  Just listing all these items as placeholder but does not apply in all rooms
-    Inventory:
-      - "keys"
-      - "guard uniform"
-      - "key card"
-      - "box"
-      - "chair"
-      - "key from supervisor"
+    Inventory: null
+
 
   Storage_Room:
     Phase: 1
+    description: "This room is the building store supply room that has items stacked up on shelves"
     Moves:
       west: NPC_Cage1
       north: SouthWest_Hall
-    #  Just listing all these items as placeholder but does not apply in all rooms
     Inventory:
-      - "keys"
-      - "guard uniform"
-      - "key card"
-      - "box"
-      - "chair"
-      - "key from supervisor"
+      guard uniform:
+        description: "Dirty guard uniform with a name tag 'Roger'"
+        action: "Take it and put it on to help blend in with other guards and un-friendlies"
+      box:
+        description: "Old cubic structure that looks like it could break."
+        action: "Use brick - you break open the the box and walla you get a key"
+        item: "key"
+      poster:
+        description: "Picture seems to be of that from the 1920's"
+        action: "Inspect it, but does not yield any result or clues."
+      safe:
+        description: "Dark gray modern desk that looks like the ones you'd find in a hotel room"
+        action: "Open it, but does not "
+
 
   SouthWest_Hall:
     Phase: 1
-    Moves:
-      west: West_Hall
-      north: Storage_Room
+    description: "The South hall is similar to the cage, filthy and muggy and it leads
+                  to the other halls"
+      Moves:
+      west: South_Hall
+      north: West_Hall
       south: Storage_Room
     Inventory: null
 
   West_Hall:
     Phase: 1
+    description: "The South hall is similar to the cage, filthy and muggy and it leads
+                  to the other halls"
     Moves:
       west: Cage1
       north: North_Hall
@@ -75,6 +85,8 @@ room:
 
   North_Hall:
     Phase: 1
+    description: "The South hall is similar to the cage, filthy and muggy and it leads
+                  to the other halls"
     Moves:
       north: NPC_Cage2
       east: East_Hall
@@ -89,6 +101,8 @@ room:
 
   East_Hall:
     Phase: 1
+    description: "The South hall is similar to the cage, filthy and muggy and it leads
+                  to the other halls"
     Moves:
       west: North_Hall
       east: Next Wing
