Made player look functionality to enable player ability to look/examine, AB#19

--- a/resources/dictionary.yml
+++ b/resources/dictionary.yml
@@ -4,6 +4,7 @@ move:
   - "go"
   - "skip"
   - "run"
+  - "head"
 take:
   - "take"
   - "grab"
@@ -13,3 +14,13 @@ help:
   - "assist"
   - "aid"
   - "support"
+  - "hint"
+quit:
+  - "quit"
+  - "exit"
+  - "stop"
+look:
+  - "inspect"
+  - "look"
+  - "touch"
+  - "check"
