added talk and edited associated classes and files, AB#32

--- a/resources/dictionary.yml
+++ b/resources/dictionary.yml
@@ -24,3 +24,19 @@ look:
   - "look"
   - "touch"
   - "check"
+talk:
+  - "talk"
+  - "speak"
+  - "chat"
+attack:
+  - "attack"
+  - "hit"
+  - "fight"
+  - "kill"
+  - "punch"
+  - "kick"
+use:
+  - "use"
+  - "open"
+  - "unlock"
+  - "consume"
