added random chat functionality and edit classes to implement, AB#34, AB#28

--- a/resources/Game_info.yml
+++ b/resources/Game_info.yml
@@ -8,3 +8,12 @@ objective:
   excitedly to celebrate your birthday."
 player:
   - "Nicholas Caged"
+chat:
+  - "Do you like kids?"
+  - "What's the matter with you!"
+  - "Evil prevails when good men...grrr i don't remember...too"
+  - "I like cars"
+  - "Who are you!"
+  - "Every great story seems to begin with a snake"
+  - "Nobody wants to watch perfection"
+  - "I think I jump around more when I'm alone."
