Item drop and get dropped item now works, AB#36

--- a/resources/location.yml
+++ b/resources/location.yml
@@ -132,6 +132,7 @@ room:
       north: "North Hall"
       south: "Southwest Hall"
     Inventory: null
+    NPCs: null
 
   North Hall:
     Phase: 1
