--- a/resources/location.yml
+++ b/resources/location.yml
@@ -151,6 +151,7 @@ room:
       east: "East Hall"
       south: "West Hall"
     Inventory: null
+    NPCs: null
 
   NPC Cage 2:
     Phase: 1
@@ -173,6 +174,7 @@ room:
       west: "North Hall"
       east: "Next Wing"
     Inventory: null
+    NPCs: null
 
   Next Wing:
     Phase: 1
@@ -181,6 +183,7 @@ room:
       west: "North Hall"
       east: "Next Wing"
     Inventory: null
+    NPCs: null
 
 
 
