Added attack command; modified dictionary.yml, location.yml, Player.java and TextParser.java, AB#51

--- a/resources/location.yml
+++ b/resources/location.yml
@@ -59,6 +59,7 @@ room:
     NPCs:
       benjamin gates:
         chat: "Why are you out of your cell?!"
+        enemy:
 #      - "Hello comrade, here is the key you asked for. Don't lose it!"
         NPC Inventory:
           orange key:
