--- a/resources/location.yml
+++ b/resources/location.yml
@@ -5,11 +5,16 @@ room:
     grid: "c1"
     description: "The cage smells very bad with flickering light and water leaking from the roof"
     Moves:
-      south: "South Hall"
-    Hidden Moves:
+      south:
+        location: "South Hall"
+        hidden: false
+        door: "cage 1 door"
       east:
-        name: "West Hall"
+        location: "West Hall"
+        hidden: true
+        door: null
         key: "brick"
+        reaction: " ----> After you messed with rubble you notice the wall is now passable"
     NPCs: null
     Inventory:
       window:
@@ -47,49 +52,57 @@ room:
     description: "The South hall is similar to the cage, filthy and muggy and it leads
                   to the other halls"
     Moves:
-      east: "Southwest Hall"
-    Blocked Moves:
       north:
-        name: "Cage 1"
-        key: "spring"
+        location: "Cage 1"
+        hidden: false
+        door: "cage 1 door"
       south:
-        name: "NPC Cage 1"
-        key: "spring"
+        location: "NPC Cage 1"
+        hidden: false
+        door: "npc cage 1 door"
+      east:
+        location: "Southwest Hall"
+        hidden: false
+        door: null
     Inventory: null
     NPCs:
       benjamin gates:
         chat: "Why are you out of your cell?!"
         enemy:
-#      - "Hello comrade, here is the key you asked for. Don't lose it!"
+        #      - "Hello comrade, here is the key you asked for. Don't lose it!"
         NPC Inventory:
           orange key:
             name: "orange key"
             description: "This key must be used to open the orange marked door"
             location: "Cage1"
             container: "desk"
-
-
   NPC Cage 1:
     Phase: 1
     grid: "e1"
     description: "The cage smells very bad with flickering
                   light and water leaking from the roof but with another captive"
     Moves:
-      north: "South Hall"
+      north:
+        location: "South Hall"
+        hidden: false
+        door: "npc cage 1 door"
     Inventory: null
     NPCs:
       jack campbell:
         chat:
-        enemy:
-#          - "Do you like kids?"
-#          - "What's the matter with you!"
+    enemy:
+  #          - "Do you like kids?"
+  #          - "What's the matter with you!"
 
   Storage Room:
     Phase: 1
     grid: "e2"
     description: "This room is the building store supply room that has items stacked up on shelves"
     Moves:
-      north: "Southwest Hall"
+      north:
+        location: "Southwest Hall"
+        hidden: false
+        door: null
     NPCs: null
     Inventory:
       closet:
@@ -105,12 +118,12 @@ room:
         description: "Old cubic structure that looks like it could break."
         action: "You shake the box it rattles"
         modifiable: true
-#        items: #example
-#          orange key:
-#            name: "orange key"
-#            description: "This key must be used to open the orange marked door"
-#            location: "Cage1"
-#            container: "desk"
+      #        items: #example
+      #          orange key:
+      #            name: "orange key"
+      #            description: "This key must be used to open the orange marked door"
+      #            location: "Cage1"
+      #            container: "desk"
       poster:
         description: "Picture seems to be of that from the 1920's"
         action: "Inspect it, but does not yield any result or clues."
@@ -124,9 +137,18 @@ room:
     description: "The South hall is similar to the cage, filthy and muggy and it leads
                   to the other halls"
     Moves:
-      west: "South Hall"
-      north: "West Hall"
-      south: "Storage Room"
+      west:
+        location: "South Hall"
+        hidden: false
+        door: null
+      north:
+        location: "West Hall"
+        hidden: false
+        door: null
+      south:
+        location: "Storage Room"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
@@ -136,9 +158,18 @@ room:
     description: "The South hall is similar to the cage, filthy and muggy and it leads
                   to the other halls"
     Moves:
-      west: "Cage 1"
-      north: "North Hall"
-      south: "Southwest Hall"
+      west:
+        location: "Cage 1"
+        hidden: false
+        door: null
+      north:
+        location: "North Hall"
+        hidden: false
+        door: null
+      south:
+        location: "Southwest Hall"
+        hidden: false
+        door: null
     Inventory: null
     NPCs: null
 
@@ -148,9 +179,18 @@ room:
     description: "The South hall is similar to the cage, filthy and muggy and it leads
                   to the other halls"
     Moves:
-      north: "NPC Cage 2"
-      east: "East Hall"
-      south: "West Hall"
+      north:
+        location: "NPC Cage 2"
+        hidden: false
+        door: null
+      east:
+        location: "East Hall"
+        hidden: false
+        door: null
+      south:
+        location: "West Hall"
+        hidden: false
+        door: null
     Inventory: null
     NPCs: null
 
@@ -158,14 +198,17 @@ room:
     Phase: 1
     grid: "a2"
     Moves:
-      south: "North Hall"
+      south:
+        location: "North Hall"
+        hidden: false
+        door: null
     NPCs:
       yuri orlov:
         chat:
-        enemy:
-#          - "I saw the guards using a key to open the door"
-#          - "Evil prevails when good men...grrr i don't remember...too "
-    Inventory: null
+    enemy:
+      #          - "I saw the guards using a key to open the door"
+      #          - "Evil prevails when good men...grrr i don't remember...too "
+      Inventory: null
 
   East Hall:
     Phase: 1
@@ -173,33 +216,33 @@ room:
     description: "The South hall is similar to the cage, filthy and muggy and it leads
                   to the other halls"
     Moves:
-      west: "North Hall"
-      east: "Next Wing"
+      west:
+        location: "North Hall"
+        hidden: false
+        door: null
+      east:
+        location: "West Hall - 2F"
+        hidden: false
+        door: null
     Inventory: null
     NPCs: null
 
-  Next Wing:
-    Phase: 1
-    grid: "b4"
-    Moves:
-      west: "North Hall"
-      east: "Next Wing"
-    Inventory: null
-    NPCs: null
-
-#####################################################################
-#        PHASE 2 MAP- LOCATION
-#####################################################################
-  West Hall - 2F:
+  #####################################################################
+  #        PHASE 2 MAP- LOCATION
+  #####################################################################
+  South West Hall - 2F:
     Phase: 2
     grid: "d1"
     description: "This is the entry to the second floor and slightly more lit than the floor before, the is also an opening above you that looks like a vent"
     Moves:
-      east: "South West Hall - 2F"
-    Hidden Moves:
+      east:
+        location: "South Hall - 2F"
+        hidden: false
+        door: null
       north:
-        name: "West Vent"
-        key: "ladder"
+        location: "West Vent"
+        hidden: false
+        door: "vent door"
     NPCs: null
     Inventory:
       rack:
@@ -211,11 +254,10 @@ room:
     grid: "c1"
     description: "This could be another way to get out of here"
     Moves:
-      east: "South West Hall - 2F"
-    Hidden Moves:
       north:
-        name: "Storage Room"
-        key: "ladder"
+        location: "Storage Room"
+        hidden: false
+        door: "vent door"
     NPCs: null
     Inventory: null
 
@@ -224,41 +266,48 @@ room:
     grid: "b1"
     description: "This room is the building store supply room that has items stacked up on shelves."
     Moves:
-      east: "South West Hall - 2F"
-    Hidden Moves:
+      east:
+        location: "North Hall - 2F"
+        hidden: false
+        door: null
       north:
-        name: "West Vent"
-        key: "ladder"
+        location: "North West Vent"
+        hidden: false
+        door: "vent door"
+      south:
+        location: "West Vent"
+        hidden: false
+        door: "vent door"
     NPCs: null
     Inventory:
       key card:
         description: "Shinny white plastic key card with the sign 'Caged' printed in red on one side"
-
-
-
-  North Vent:
-    Phase: 2
-    grid: "a1"
-    description: "This could be another way to get out of here"
-    Moves:
-      east: "South West Hall - 2F"
-    Hidden Moves:
-      north:
-        name: "West Vent"
-        key: "ladder"
-    NPCs: null
-    Inventory: null
 
   North West Vent:
     Phase: 2
     grid: "a2"
     description: "This could be another way to get out of here"
     Moves:
-      east: "South West Hall - 2F"
-    Hidden Moves:
-      north:
-        name: "West Vent"
-        key: "ladder"
+      east:
+        location: "North Vent"
+        hidden: false
+        door: null
+    NPCs: null
+    Inventory: null
+
+  North Vent:
+    Phase: 2
+    grid: "a1"
+    description: "This could be another way to get out of here"
+    Moves:
+      west:
+        location: "North West Vent"
+        hidden: false
+        door: null
+      east:
+        location: "North East Vent"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
@@ -267,56 +316,58 @@ room:
     grid: "a3"
     description: "This could be another way to get out of here"
     Moves:
-      east: "South West Hall - 2F"
-    Hidden Moves:
-      north:
-        name: "West Vent"
-        key: "ladder"
+      south:
+        location: "North East Hall - 2F"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
-  South West Hall - 2F:
+  South Hall - 2F:
     Phase: 2
     grid: "d2"
-    description: "This is connected to the West Hall, the break room and the north west hall. Slightly more lit than the floor before."
+    description: "This is connected to the South West Hall, the break room and the Central Corridor. Slightly more lit than the floor before."
     Moves:
-      south: "Break Room"
-      north: "North West Hall - 2F"
-      west: "West Hall - 2F"
-    Hidden Moves:
+      south:
+        location: "Break Room - 2F"
+        hidden: false
+        door: null
       north:
-        name: "West Vent"
-        key: "ladder"
+        location: "Central Corridor - 2F"
+        hidden: false
+        door: null
+      west:
+        location: "South West Hall - 2F"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
-
-  ############################################
   Break Room - 2F:
     Phase: 2
     grid: "e2"
     description: "The break room looks like most break rooms with a couple of dinning room tables and chairs with a fridge to your left "
     Moves:
-      north: "South West Hall - 2F"
-    Hidden Moves:
-  #    north:
-  #      name: "West Vent"
-  #      key: "ladder"
+      north:
+        location: "South Hall - 2F"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
-
-
-  North West Hall - 2F:
+  Central Corridor - 2F:
     Phase: 2
     grid: "c2"
     description: "This is connected to The break room and the north west hall. Slightly more lit than the floor before."
     Moves:
-      south: "South West Hall - 2F"
-    Hidden Moves:
-  #    north:
-  #      name: "West Vent"
-  #      key: "ladder"
+      south:
+        location: "South Hall - 2F"
+        hidden: false
+        door: null
+      north:
+        location: "North Hall - 2F"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
@@ -325,13 +376,18 @@ room:
     grid: "b2"
     description: "This is connected to the Storage room, North West Hall, and the North East Hall. Slightly more lit than the first floor before."
     Moves:
-      west: "Storage room"
-      south: "North West Hall - 2F"
-      east: "North East Hall - 2F"
-    Hidden Moves:
-    #    north:
-    #      name: "West Vent"
-    #      key: "ladder"
+      west:
+        location: "Storage room"
+        hidden: false
+        door: null
+      south:
+        location: "Central Corridor - 2F"
+        hidden: false
+        door: null
+      east:
+        location: "North East Hall - 2F"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
 
@@ -341,16 +397,13 @@ room:
     grid: "b3"
     description: "This is connected to the North Hall, and the Escape room. Slightly more lit than the floor before."
     Moves:
-      west: "North Hall - 2F"
-      east: "Escape room"
-    Hidden Moves:
-    #    north:
-    #      name: "West Vent"
-    #      key: "ladder"
+      west:
+        location: "North Hall - 2F"
+        hidden: false
+        door: null
+      east:
+        location: "Escape room"
+        hidden: false
+        door: null
     NPCs: null
     Inventory: null
-
-
-
-
-
