Guards can drop loot if beat!, AB#57

--- a/resources/player.yml
+++ b/resources/player.yml
@@ -4,3 +4,5 @@ currentLocation: "Cage 1"
 hitPoints: 20
 equipment: "prison clothing"
 weapon: "nothing"
+lastAction:
+  - "You awaken and found yourself crying in the cage..."
