--- a/resources/location.yml
+++ b/resources/location.yml
@@ -12,21 +12,19 @@ room:
       east:
         location: "West Hall"
         hidden: true
-        door: null
+        door: "cage wall"
         key: "brick"
         reaction: " ----> After you messed with rubble you notice the wall is now passable"
     NPCs: null
     Inventory:
       window:
-        description: "Heavily reinforced metal, maybe you can wiggle and use the 'window bars'"
-        # action replaced with sub item for interaction
-        # new idea
+        description: "Heavily reinforced metal, maybe you can wiggle and 'use' the 'window bars'"
         bars: "You check the bars and nothing happens, you then look outside, it makes you sad and anxious."
       desk:
-        description: "Old worn out wooden desk with a 'desk drawer'"
+        description: "Old worn out wooden desk with a 'desk drawer' you may be able to 'use'"
         drawer: "The desk is mostly broken, but your are able to open the drawer... and find nothing"
       bed:
-        description: "Full-size bed sits directly under window with uncomfortable mattress with exposed loose spring. maybe use the 'bed mattress' and get a spring ... "
+        description: "Full-size bed sits directly under window with uncomfortable mattress with exposed loose spring. maybe 'use' the 'bed mattress' and get a spring ... "
         mattress: "You try and pull a spring from the old mattress"
         items: #example
           mattress:
@@ -34,8 +32,8 @@ room:
             description: "an old spring from a bed frame, might be used to open things"
             strength: 1
             opens: "level one door"
-      wall: ###Check caps!
-        description: "The wall seems to be falling apart, maybe you can use the 'wall rubble' to find something useful."
+      wall:
+        description: "The wall seems to be falling apart, maybe you can 'use' the 'wall rubble' to find something useful."
         rubble: "you pick at the wall fragments..."
         modifiable: true
         items: #example
@@ -62,7 +60,7 @@ room:
       east:
         location: "Southwest Hall"
         hidden: false
-        door: null
+        door: "south hall door"
     Inventory: null
     NPCs:
       benjamin gates:
@@ -71,11 +69,10 @@ room:
         hp: 30
         #      - "Hello comrade, here is the key you asked for. Don't lose it!"
         NPC Inventory:
-          orange key:
-            name: "orange key"
-            description: "This key must be used to open the orange marked door"
-            location: "Cage1"
-            container: "desk"
+          name: "orange key"
+          description: "This key must be used to open the orange marked door"
+          strength: 1
+          opens: "Wing 1 Door"
   NPC Cage 1:
     Phase: 1
     grid: "e0"
@@ -141,7 +138,7 @@ room:
       west:
         location: "South Hall"
         hidden: false
-        door: null
+        door: "south hall door"
       north:
         location: "West Hall"
         hidden: false
@@ -161,8 +158,10 @@ room:
     Moves:
       west:
         location: "Cage 1"
-        hidden: false
-        door: null
+        hidden: true
+        door: "cage wall"
+        key: "brick"
+        reaction: " ----> After you messed with rubble you notice the wall is now passable"
       north:
         location: "North Hall"
         hidden: false
@@ -183,7 +182,7 @@ room:
       north:
         location: "NPC Cage 2"
         hidden: false
-        door: null
+        door: "npc cage 2 door"
       east:
         location: "East Hall"
         hidden: false
@@ -202,7 +201,7 @@ room:
       south:
         location: "North Hall"
         hidden: false
-        door: null
+        door: "npc cage 2 door"
     NPCs:
       yuri orlov:
         chat:
@@ -222,9 +221,9 @@ room:
         hidden: false
         door: null
       east:
-        location: "West Hall - 2F"
+        location: "South West Hall - 2F"
         hidden: false
-        door: null
+        door: "wing 1 door"
     Inventory: null
     NPCs: null
 
@@ -259,6 +258,10 @@ room:
         location: "Storage Room"
         hidden: false
         door: "vent door"
+      south:
+          location: "South West Hall - 2F"
+          hidden: false
+          door: "vent door"
     NPCs: null
     Inventory: null
 
@@ -270,7 +273,7 @@ room:
       east:
         location: "North Hall - 2F"
         hidden: false
-        door: null
+        door: "storage Room 2 door"
       north:
         location: "North West Vent"
         hidden: false
@@ -293,6 +296,10 @@ room:
         location: "North Vent"
         hidden: false
         door: null
+      south:
+        location: "Storage Room - 2F"
+        hidden: false
+        door: "vent door"
     NPCs: null
     Inventory: null
 
@@ -321,10 +328,14 @@ room:
     grid: "a2"
     description: "This could be another way to get out of here"
     Moves:
+      west:
+        location: "North Vent"
+        hidden: false
+        door: "vent door"
       south:
         location: "North East Hall - 2F"
         hidden: false
-        door: null
+        door: "vent door"
     NPCs: null
     Inventory: null
 
@@ -392,7 +403,7 @@ room:
       west:
         location: "Storage room"
         hidden: false
-        door: null
+        door: "storage Room 2 door"
       south:
         location: "Central Corridor - 2F"
         hidden: false
@@ -417,6 +428,6 @@ room:
       east:
         location: "Escape room"
         hidden: false
-        door: null
+        door: "wing 2 door"
     NPCs: null
     Inventory: null
