Reworked unlock/pick doors command to restore open commands for items in room, AB#456

--- a/resources/dictionary.yml
+++ b/resources/dictionary.yml
@@ -44,6 +44,7 @@ use:
   - "use"
   - "consume"
   - "make"
+  - "open"
 inventory:
   - "inventory"
   - "inv"
@@ -58,9 +59,8 @@ drop:
   - "leave"
   - "abandon"
   - "lose"
-open:
+unlock:
   - "pick"
-  - "open"
   - "unlock"
 equip:
   - "equip"
